--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
     <version>4.12</version>
     <scope>test</scope>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
+<dependency>
+    <groupId>org.aspectj</groupId>
+    <artifactId>aspectjweaver</artifactId>
+    <version>1.8.13</version>
+</dependency>
 
     	<!-- 1)Spring核心 -->
 		<dependency>
